# transport_scrapper

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_station.csv
serbian_lines_scrapper/: links.txt  main.py  requests_dump.txt  routes_scrapper.py  serbian_scrapper.py
tests/: synthetic_server.py  test_html_routes.txt  test_live_serbian_scrapper.py  test_pdf_routes.txt  test_serbian_scrapper.py  test_stylesheets.txt  test_synthetic_serbian_scrapper.py
tests/templates/: base.html  Секретаријат за јавни превоз _ Ред вожње линија 18.html  Секретаријат за јавни превоз _ Ред вожње линија 2.html  Секретаријат за јавни превоз _ Ред вожње линија 21A.html  Секретаријат за јавни превоз _ Ред вожње линија 23.html  Секретаријат за јавни превоз _ Ред вожње линија 400.html  Секретаријат за јавни превоз _ Ред вожње линија 4404а.html  Секретаријат за јавни превоз _ Ред вожње линија 451а.html  Секретаријат за јавни превоз _ Ред вожње линија 460а.html  Секретаријат за јавни превоз _ Ред вожње линија 465.html  Секретаријат за јавни превоз _ Ред вожње линија 493.html  Секретаријат за јавни превоз _ Ред вожње линија 581а.html  Секретаријат за јавни превоз _ Ред вожње.html
tests/templates/static/Секретаријат за јавни превоз _ Ред вожње_files/: app.css  c7fa7451-6f95-4815-ac32-b8cc2537837a  css2  editor.js  fontello.css  js  rezimske-izmene-admin-responsive.css  tw-components.js  web.css
