[tool.poetry]
name = "beaituful-soup"
version = "0.1.0"
description = ""
authors = ["Nikita Savin <klaster26@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
isort = "^5.13.2"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tools.black]
line-length = 79

